Updated header and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Drawing App</title>
+        <title>Relaxing Drawing App</title>
         <link rel="stylesheet" href="style.css" />
         <script src="script.js" defer></script>
     </head>
@@ -11,7 +11,7 @@
     <body>
         <!--Header Section-->
         <div class="header">
-          <h1>Drawing App 🐳</h1>  
+          <h1>Relaxing Drawing App 🐳</h1>  
         </div>
        
         <!--Canvas Section-->
